<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/success"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_danger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/danger"
        android:textSize="14sp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_cari_kontak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="15"
            android:hint="@string/hint_nomor_telp"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cari_kontak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/cari_kontak" />

    </LinearLayout>

    <ListView
        android:id="@+id/contact_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>